Include three paragraph and one external css file

--- a/index.html
+++ b/index.html
@@ -5,9 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My second repo</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Bangladesh is a very beautiful country</h1>
     <h1>I love Bangladesh very much.</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, hic natus!
+      Minus voluptate facere quisquam neque sequi id reprehenderit totam animi
+      accusamus, illo quos officiis debitis quibusdam saepe nemo earum ducimus
+      nisi? Aut, consequuntur odio, quasi totam libero maiores ea molestiae
+      deserunt sed earum saepe dolores ratione quod cumque repudiandae!
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ratione ea
+      sequi accusantium non, molestiae aspernatur doloribus officia esse aut,
+      consequuntur cum blanditiis architecto aliquid est voluptatibus, nemo
+      repellat fugiat ipsum eligendi. Quas exercitationem cum magni officia
+      porro fugit non dolores illum facere, debitis dolorem harum impedit
+      repellendus, provident perferendis?
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos voluptas
+      facere quam voluptatibus officia cum deserunt incidunt delectus beatae
+      recusandae perferendis consequatur, officiis, nihil fugit neque doloribus!
+      Ipsum culpa ducimus unde corrupti mollitia sint dolorem animi ea commodi
+      non et, nihil impedit maiores iure, dolor voluptate. Et debitis provident
+      necessitatibus.
+    </p>
+    <p></p>
+    <p></p>
   </body>
 </html>
