Added 5th paragraph

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
       Sea-Beach at coxbazar. So many people comes from around the world to enjoy
       this beaty in every year,
     </p>
-    <p></p>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora, at? Rem
+      mollitia adipisci id sint itaque perferendis delectus nam omnis voluptates
+      alias voluptate, iure debitis quibusdam cumque tenetur? Repellendus iste,
+      magnam error aliquam suscipit sit quidem voluptates illum atque officia
+      blanditiis, nobis nesciunt id minima obcaecati, dolore at possimus ipsum
+      architecto qui! Odit doloremque est nesciunt autem illo laboriosam beatae.
+    </p>
   </body>
 </html>
